Add error document 401 default

--- a/apache2-wordpress.conf
+++ b/apache2-wordpress.conf
@@ -9,6 +9,7 @@ DirectoryIndex index.php index.html index.htm
 	RewriteCond %{REQUEST_FILENAME} !-f
 	RewriteCond %{REQUEST_FILENAME} !-d
 	RewriteRule . /index.php [L]
+	ErrorDocument 401 default
 	</IfModule>
 	# END WordPress
 </Directory>
